--- a/dashboard.html
+++ b/dashboard.html
@@ -197,8 +197,8 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/census_data_output.parquet", {"name":"./data/census_data_output.parquet","path":"./_file/data/census_data_output.1374b127.parquet","lastModified":1727086321368});
-registerFile("./data/geo.csv", {"name":"./data/geo.csv","mimeType":"text/csv","path":"./_file/data/geo.8ba75b99.csv","lastModified":1727086321384});
+registerFile("./data/census_data_output.parquet", {"name":"./data/census_data_output.parquet","path":"./_file/data/census_data_output.1374b127.parquet","lastModified":1727089930948});
+registerFile("./data/geo.csv", {"name":"./data/geo.csv","mimeType":"text/csv","path":"./_file/data/geo.8ba75b99.csv","lastModified":1727089930964});
 registerTable("geo", FileAttachment("./data/geo.csv"));
 registerTable("census_data_source", FileAttachment("./data/census_data_output.parquet"));
 
@@ -382,7 +382,7 @@ const morphers = inSituMorphMouse({
 return {colourScalePop,layouts,morphers};
 }});
 
-define({id: "84d48980", inputs: ["d3","_","turf","context2d","width","flubber","OffscreenCanvas"], outputs: ["inSituMorphMouse","_insertIntermediateLayouts","intermTranslate","prepareGeoJsonForMorphingLib","intermTranslateV","intermCircles","intermChangeShape","intermBbSize"], body: (d3,_,turf,context2d,width,flubber,OffscreenCanvas) => {
+define({id: "346be4c0", inputs: ["d3","_","turf","context2d","width","flubber","OffscreenCanvas"], outputs: ["inSituMorphMouse","_insertIntermediateLayouts","intermTranslate","prepareGeoJsonForMorphingLib","intermTranslateV","intermCircles","intermChangeShape","intermBbSize"], body: (d3,_,turf,context2d,width,flubber,OffscreenCanvas) => {
 // ---------------------- Functions for morphing ----------------------
 
 function inSituMorphMouse(options) {
@@ -438,16 +438,44 @@ function inSituMorphMouse(options) {
   //   chartWH
   // );
 
-  if (interactive)
-    context.canvas.addEventListener("mousemove", (e) => {
-      if (e.shiftKey) {
+  if (interactive) {
+    let amtValue = 0; // initialize amtValue
+    let increasing = true; // direction flag to track the direction of change
+    document.addEventListener("keydown", (e) => {
+      if (e.code === "Space") {
+        console.log("Spacebar pressed");
         if (frame) cancelAnimationFrame(frame);
         isAnimating = false;
-        const mouseX = d3.pointer(e)[0];
-        const amtValue = _.clamp(Math.min(mouseX, chartWH) / chartWH, 0, 1);
+
+        if (increasing) {
+          amtValue += 0.1;
+          if (amtValue >= 1) {
+            amtValue = 1;
+            increasing = false;
+          }
+        } else {
+          amtValue -= 0.1;
+          if (amtValue <= 0) {
+            amtValue = 0;
+            increasing = true;
+          }
+        }
+
         throttled(amtValue);
       }
     });
+  }
+
+  // if (interactive)
+  //   context.canvas.addEventListener("mousemove", (e) => {
+  //     if (e.shiftKey) {
+  //       if (frame) cancelAnimationFrame(frame);
+  //       isAnimating = false;
+  //       const mouseX = d3.pointer(e)[0];
+  //       const amtValue = _.clamp(Math.min(mouseX, chartWH) / chartWH, 0, 1);
+  //       throttled(amtValue);
+  //     }
+  //   });
 
   //Calculate all the necessary flubber interpolators for everything
   const flubbers = [];
@@ -1119,7 +1147,7 @@ body, html {
           <div class="column is-full">
             <div class="box">
               <div style="padding:10px;"> <observablehq-loading></observablehq-loading><!--:d0097d67:--> </div>
-              <div style="padding:10px;"> Use `shift` button to morph. </div>
+              <div style="padding:10px;"> Press the 'spacebar' button to gradually morph the shape.  </div>
             </div>
           </div>
         </div>
@@ -1148,7 +1176,7 @@ body, html {
 <div class="observablehq observablehq--block"><!--:fb7d7c7a:--></div>
 <div class="observablehq observablehq--block"><!--:243d9e50:--></div>
 <!-- ------------------ # Morphing Geometry Functions ------------------  -->
-<div class="observablehq observablehq--block"><!--:84d48980:--></div>
+<div class="observablehq observablehq--block"><!--:346be4c0:--></div>
 <!-- ------------------ # Gridded-Glyphmap Functions ------------------  -->
 <div class="observablehq observablehq--block"><!--:34f88f4c:--></div>
 <div class="observablehq observablehq--block"><!--:3b62e633:--></div>
