--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,9 @@
 <link rel="modulepreload" href="./_node/@turf/turf@7.1.0/index.js">
 <link rel="modulepreload" href="./_npm/d3-require@1.3.0/_esm.js">
 <link rel="modulepreload" href="./_import/components/gridded-glyphmaps/index.min.e9355c65.js">
+<link rel="modulepreload" href="./_import/components/osgb/index.1d2476df.js">
 <link rel="modulepreload" href="./_import/components/utils.ec49f1d6.js">
+<link rel="modulepreload" href="./_import/components/osgb/ellipsoid.1ac4eba6.js">
 <link rel="modulepreload" href="./_npm/topojson-client@3.1.0/_esm.js">
 <link rel="modulepreload" href="./_npm/d3@7.9.0/_esm.js">
 <link rel="modulepreload" href="./_npm/lodash@4.17.21/_esm.js">
@@ -197,13 +199,13 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/census_data_output.parquet", {"name":"./data/census_data_output.parquet","path":"./_file/data/census_data_output.1374b127.parquet","lastModified":1727196827305});
-registerFile("./data/geo.csv", {"name":"./data/geo.csv","mimeType":"text/csv","path":"./_file/data/geo.8ba75b99.csv","lastModified":1727196827323});
+registerFile("./data/census_data_output.parquet", {"name":"./data/census_data_output.parquet","path":"./_file/data/census_data_output.1374b127.parquet","lastModified":1727210247593});
+registerFile("./data/geo.csv", {"name":"./data/geo.csv","mimeType":"text/csv","path":"./_file/data/geo.8ba75b99.csv","lastModified":1727210247609});
 registerTable("geo", FileAttachment("./data/geo.csv"));
 registerTable("census_data_source", FileAttachment("./data/census_data_output.parquet"));
 
-define({id: "069d5f98", outputs: ["turf","require","d3","flubber","glyphMap","createDiscretiserValue","_drawCellBackground","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
-const [turf, {require}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/d3-require@1.3.0/_esm.js"), import("./_import/components/gridded-glyphmaps/index.min.e9355c65.js"), import("./_import/components/utils.ec49f1d6.js")]);
+define({id: "63a4c335", outputs: ["turf","require","d3","flubber","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
+const [turf, {require}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/d3-require@1.3.0/_esm.js"), import("./_import/components/gridded-glyphmaps/index.min.e9355c65.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/utils.ec49f1d6.js")]);
 // import * as d3 from "npm:d3";
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
@@ -211,7 +213,12 @@ const flubber = require("flubber@0.4");
 //   inSituMorphMouse,
 //   prepareGeoJsonForMorphingLib,
 // } from "./components/morpher.js";
-return {turf,require,d3,flubber,glyphMap,createDiscretiserValue,_drawCellBackground,downloadBoundaries,joinCensusDataToGeoJSON,convertGridCsvToGeoJson,context2d};
+return {turf,require,d3,flubber,glyphMap,createDiscretiserValue,_drawCellBackground,OSGB,downloadBoundaries,joinCensusDataToGeoJSON,convertGridCsvToGeoJson,context2d};
+}});
+
+define({id: "5dd85f8f", inputs: ["OSGB"], outputs: ["proj"], body: (OSGB) => {
+const proj = new OSGB();
+return {proj};
 }});
 
 define({id: "2d300212", mode: "inline", inputs: ["localAuthorityInput","display"], body: async (localAuthorityInput,display) => {
@@ -344,7 +351,7 @@ const data = _.keyBy(
 return {data};
 }});
 
-define({id: "a92453f1", inputs: ["d3","data","prepareGeoJsonForMorphingLib","regular_geodata","local_authority","geogName","grid_geodata","resize","inSituMorphMouse"], outputs: ["colourScalePop","layouts","morphers"], body: (d3,data,prepareGeoJsonForMorphingLib,regular_geodata,local_authority,geogName,grid_geodata,resize,inSituMorphMouse) => {
+define({id: "4094fbaa", inputs: ["d3","data","prepareGeoJsonForMorphingLib","regular_geodata","local_authority","geogName","grid_geodata","resize","inSituMorphMouse"], outputs: ["colourScalePop","layouts","morphers"], body: (d3,data,prepareGeoJsonForMorphingLib,regular_geodata,local_authority,geogName,grid_geodata,resize,inSituMorphMouse) => {
 const colourScalePop = d3
   .scaleSequential(d3.interpolateBlues)
   .domain([0, d3.max(Object.values(data).map((row) => row.population))]);
@@ -378,6 +385,7 @@ const layouts = [
 //   layouts,
 // });
 
+// using observable framework resize callback function
 const morphers = resize((width, height) =>
   inSituMorphMouse(
     {
@@ -394,7 +402,7 @@ const morphers = resize((width, height) =>
 return {colourScalePop,layouts,morphers};
 }});
 
-define({id: "831440ac", inputs: ["d3","_","turf","context2d","flubber","OffscreenCanvas"], outputs: ["inSituMorphMouse","_insertIntermediateLayouts","intermTranslate","prepareGeoJsonForMorphingLib","intermTranslateV","intermCircles","intermChangeShape","intermBbSize"], body: (d3,_,turf,context2d,flubber,OffscreenCanvas) => {
+define({id: "147250e0", inputs: ["d3","_","turf","context2d","flubber","OffscreenCanvas"], outputs: ["inSituMorphMouse","_insertIntermediateLayouts","intermTranslate","prepareGeoJsonForMorphingLib","intermTranslateV","intermCircles","intermChangeShape","intermBbSize"], body: (d3,_,turf,context2d,flubber,OffscreenCanvas) => {
 // ---------------------- Functions for morphing ----------------------
 
 function inSituMorphMouse(options, width) {
@@ -459,7 +467,7 @@ function inSituMorphMouse(options, width) {
     let increasing = true; // direction flag to track the direction of change
     document.addEventListener("keydown", (e) => {
       if (e.code === "Space") {
-        console.log("Spacebar pressed");
+        // console.log("Spacebar pressed");
         if (frame) cancelAnimationFrame(frame);
         isAnimating = false;
 
@@ -931,29 +939,100 @@ function intermBbSize(layout, toLayout) {
 return {inSituMorphMouse,_insertIntermediateLayouts,intermTranslate,prepareGeoJsonForMorphingLib,intermTranslateV,intermCircles,intermChangeShape,intermBbSize};
 }});
 
-define({id: "34f88f4c", inputs: ["_","regular_geodata_withcensus","turf"], outputs: ["regularGeodataLookup"], body: (_,regular_geodata_withcensus,turf) => {
+define({id: "3ca232e1", inputs: ["proj"], outputs: ["transformCoordinates","transformGeometry"], body: (proj) => {
+// coordinate transformation utilities
+function transformCoordinates(coords) {
+  if (coords.length === 4 && !Array.isArray(coords[0])) {
+    // bounding box
+    return [
+      ...proj.toGeo([coords[0], coords[1]]),
+      ...proj.toGeo([coords[2], coords[3]]),
+    ];
+  } else if (Array.isArray(coords[0])) {
+    //  arrays of coordinates
+    return coords.map(transformCoordinates);
+  } else {
+    //  individual coordinate pairs
+    return proj.toGeo(coords);
+  }
+}
+
+function transformGeometry(geometry) {
+  if (geometry.type === "GeometryCollection") {
+    return {
+      ...geometry,
+      geometries: geometry.geometries.map(transformGeometry),
+    };
+  }
+
+  return {
+    ...geometry,
+    coordinates: transformCoordinates(geometry.coordinates),
+  };
+}
+
+// check to see if it works
+// display(transformCoordinates([547764, 180871]));
+
+// const transformedGeoJSON = {
+//   ...originalGeoJSON,
+//   features: originalGeoJSON.features.map(feature => ({
+//     ...feature,
+//     geometry: {
+//       ...feature.geometry,
+//       coordinates: transformCoordinates(feature.geometry.coordinates)
+//     }
+//   }))
+// };
+return {transformCoordinates,transformGeometry};
+}});
+
+define({id: "4913bd0b", inputs: ["_","regular_geodata_withcensus","transformGeometry","turf","grid_geodata_withcensus"], outputs: ["regularGeodataLookup","gridGeodataLookup"], body: (_,regular_geodata_withcensus,transformGeometry,turf,grid_geodata_withcensus) => {
+// const regularGeodataLookup = _.keyBy(
+//   regular_geodata_withcensus.features.map((feat) => {
+//     return { ...feat, centroid: turf.getCoord(turf.centroid(feat.geometry)) };
+//   }),
+//   (feat) => feat.properties.code
+// );
+
+// const gridGeodataLookup = _.keyBy(
+//   grid_geodata_withcensus.features.map((feat) => {
+//     return { ...feat, centroid: turf.getCoord(turf.centroid(feat.geometry)) };
+//   }),
+//   (feat) => feat.properties.code
+// );
+
 const regularGeodataLookup = _.keyBy(
   regular_geodata_withcensus.features.map((feat) => {
-    return { ...feat, centroid: turf.getCoord(turf.centroid(feat.geometry)) };
+    const transformedGeometry = transformGeometry(feat.geometry);
+    const centroid = turf.getCoord(turf.centroid(transformedGeometry));
+    return {
+      ...feat,
+      geometry: transformedGeometry,
+      centroid: centroid,
+    };
   }),
   (feat) => feat.properties.code
 );
-// display(regularGeodataLookup);
-return {regularGeodataLookup};
-}});
 
-define({id: "3b62e633", inputs: ["_","grid_geodata_withcensus","turf"], outputs: ["gridGeodataLookup"], body: (_,grid_geodata_withcensus,turf) => {
 const gridGeodataLookup = _.keyBy(
   grid_geodata_withcensus.features.map((feat) => {
-    return { ...feat, centroid: turf.getCoord(turf.centroid(feat.geometry)) };
+    const transformedGeometry = transformGeometry(feat.geometry);
+    const centroid = turf.getCoord(turf.centroid(transformedGeometry));
+    return {
+      ...feat,
+      geometry: transformedGeometry,
+      centroid: centroid,
+    };
   }),
   (feat) => feat.properties.code
 );
-// display(gridGeodataLookup);
-return {gridGeodataLookup};
+
+// display(regularGeodataLookup);
+return {regularGeodataLookup,gridGeodataLookup};
 }});
 
-define({id: "f62c6315", inputs: ["Inputs","Generators","createDiscretiserValue"], outputs: ["glyphmapTypeInput","glyphmapType","valueDiscretiser"], body: (Inputs,Generators,createDiscretiserValue) => {
+define({id: "f57e0ba4", inputs: ["Inputs","Generators","createDiscretiserValue"], outputs: ["glyphmapTypeInput","glyphmapType","valueDiscretiser"], body: (Inputs,Generators,createDiscretiserValue) => {
 const glyphmapTypeInput = Inputs.radio(["Polygons", "Gridmap", "Gridded"], {
   label: "Type of map",
   value: "Polygons",
@@ -970,22 +1049,30 @@ function valueDiscretiser(geomLookup) {
     boundaryFn: (key) => geomLookup[key]?.geometry.coordinates[0],
   });
 }
+
 // display(valueDiscretiser(regularGeodataLookup));
+// display(transformCoordinates(turf.bbox(regular_geodata)));
 return {glyphmapTypeInput,glyphmapType,valueDiscretiser};
 }});
 
-define({id: "6b2381a9", inputs: ["turf","regular_geodata","data","regularGeodataLookup","d3","insideCell","drawRadialMultivariateGlyph"], outputs: ["glyphMapSpec"], body: (turf,regular_geodata,data,regularGeodataLookup,d3,insideCell,drawRadialMultivariateGlyph) => {
+define({id: "7e12b612", inputs: ["turf","regular_geodata","proj","data","regularGeodataLookup","d3","insideCell","drawRadialMultivariateGlyph"], outputs: ["glyphMapSpec"], body: (turf,regular_geodata,proj,data,regularGeodataLookup,d3,insideCell,drawRadialMultivariateGlyph) => {
 // glyphmap basic specs
+
 function glyphMapSpec(width, height) {
-  console.log("in glyphmapspec", width, height);
+  // console.log("in glyphmapspec", width, height);
+  const bbox = turf.bbox(regular_geodata);
   return {
-    coordType: "notmercator",
-    initialBB: turf.bbox(regular_geodata),
+    // coordType: "notmercator",
+    initialBB: [
+      ...proj.toGeo([bbox[0], bbox[1]]),
+      ...proj.toGeo([bbox[2], bbox[3]]),
+    ],
     data: Object.values(data),
     getLocationFn: (row) => regularGeodataLookup[row.code]?.centroid,
     discretisationShape: "grid",
+    mapType: "CartoPositron",
     interactiveCellSize: true,
-    cellSize: 30,
+    cellSize: 60,
 
     // width: 800,
     // height: 600,
@@ -1066,7 +1153,7 @@ function glyphMapSpec(width, height) {
       postDrawFn: (cells, cellSize, ctx, global, panel) => {},
 
       tooltipTextFn: (cell) => {
-        console.log(cell.otherdata);
+        // console.log(cell.otherdata);
       },
     },
   };
@@ -1074,11 +1161,10 @@ function glyphMapSpec(width, height) {
 return {glyphMapSpec};
 }});
 
-define({id: "0a4df39c", inputs: ["glyphMap","glyphMapSpec","valueDiscretiser","regularGeodataLookup","gridGeodataLookup"], outputs: ["createGlyphMap","glyphmap"], body: (glyphMap,glyphMapSpec,valueDiscretiser,regularGeodataLookup,gridGeodataLookup) => {
+define({id: "51a431c3", inputs: ["glyphMap","glyphMapSpec","valueDiscretiser","regularGeodataLookup","gridGeodataLookup"], outputs: ["createGlyphMap","glyphmap"], body: (glyphMap,glyphMapSpec,valueDiscretiser,regularGeodataLookup,gridGeodataLookup) => {
 function createGlyphMap(glyphmapType, { width, height }) {
   // console.log(width, height);
   if (glyphmapType == "Polygons") {
-    console.log(width, height);
     return glyphMap({
       ...glyphMapSpec(width, height), //takes the base spec...
       discretiserFn: valueDiscretiser(regularGeodataLookup),
@@ -1096,6 +1182,7 @@ function createGlyphMap(glyphmapType, { width, height }) {
 const glyphmap = glyphMapSpec();
 
 // display(createGlyphMap(glyphmapType));
+// display(valueDiscretiser(regularGeodataLookup));
 return {createGlyphMap,glyphmap};
 }});
 
@@ -1114,12 +1201,12 @@ const grid_geodata_withcensus = joinCensusDataToGeoJSON(
 return {regular_geodata_withcensus,grid_geodata_withcensus};
 }});
 
-define({id: "fe98b794", inputs: ["d3","drawPieSlice"], outputs: ["drawRadialMultivariateGlyph"], body: (d3,drawPieSlice) => {
+define({id: "246c80d3", inputs: ["d3","drawPieSlice"], outputs: ["drawRadialMultivariateGlyph"], body: (d3,drawPieSlice) => {
 function drawRadialMultivariateGlyph(normalisedData, x, y, size, ctx) {
   let angle = (2 * Math.PI) / normalisedData.length;
   let centerX = x;
   let centerY = y;
-  let radius = size;
+  let radius = size / 2;
   // console.log(radius);
 
   //get a colour palette
@@ -1182,7 +1269,8 @@ return {insideCell};
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
 <!-- ------------------ # Imports ------------------  -->
-<div class="observablehq observablehq--block"><!--:069d5f98:--></div>
+<div class="observablehq observablehq--block"><!--:63a4c335:--></div>
+<div class="observablehq observablehq--block"><!--:5dd85f8f:--></div>
 <!-- ------------ The HTML Layout ------------ -->
 <!-------- Stylesheets -------->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
@@ -1226,17 +1314,17 @@ body, html {
 <div class="observablehq observablehq--block"><!--:47b53055:--></div>
 <!-- ------------------ # Morphing Geometry Functions ------------------  -->
 <div class="observablehq observablehq--block"><!--:fb7d7c7a:--></div>
-<div class="observablehq observablehq--block"><!--:a92453f1:--></div>
+<div class="observablehq observablehq--block"><!--:4094fbaa:--></div>
 <!-- ------------------ # Morphing Geometry Functions ------------------  -->
-<div class="observablehq observablehq--block"><!--:831440ac:--></div>
+<div class="observablehq observablehq--block"><!--:147250e0:--></div>
 <!-- ------------------ # Gridded-Glyphmap Functions ------------------  -->
-<div class="observablehq observablehq--block"><!--:34f88f4c:--></div>
-<div class="observablehq observablehq--block"><!--:3b62e633:--></div>
-<div class="observablehq observablehq--block"><!--:f62c6315:--></div>
-<div class="observablehq observablehq--block"><!--:6b2381a9:--></div>
-<div class="observablehq observablehq--block"><!--:0a4df39c:--></div>
+<div class="observablehq observablehq--block"><!--:3ca232e1:--></div>
+<div class="observablehq observablehq--block"><!--:4913bd0b:--></div>
+<div class="observablehq observablehq--block"><!--:f57e0ba4:--></div>
+<div class="observablehq observablehq--block"><!--:7e12b612:--></div>
+<div class="observablehq observablehq--block"><!--:51a431c3:--></div>
 <div class="observablehq observablehq--block"><!--:92e60971:--></div>
-<div class="observablehq observablehq--block"><!--:fe98b794:--></div>
+<div class="observablehq observablehq--block"><!--:246c80d3:--></div>
 <div class="observablehq observablehq--block"><!--:9d040433:--></div>
 <div class="observablehq observablehq--block"><!--:520e6d60:--></div>
 </main>
