--- a/dummy.html
+++ b/dummy.html
@@ -24,6 +24,7 @@
 <link rel="modulepreload" href="./_npm/lodash@4.17.21/_esm.js">
 <link rel="modulepreload" href="./_observablehq/stdlib/duckdb.js">
 <link rel="modulepreload" href="./_observablehq/stdlib/inputs.js">
+<link rel="modulepreload" href="./_npm/@observablehq/plot@0.6.16/_esm.js">
 <link rel="modulepreload" href="./_npm/@duckdb/duckdb-wasm@1.28.0/_esm.js">
 <link rel="modulepreload" href="./_npm/htl@0.3.1/_esm.js">
 <link rel="modulepreload" href="./_npm/isoformat@0.2.1/_esm.js">
@@ -169,6 +170,7 @@
 <link rel="modulepreload" href="./_npm/d3-timer@3.0.1/_esm.js">
 <link rel="modulepreload" href="./_npm/d3-transition@3.0.1/_esm.js">
 <link rel="modulepreload" href="./_npm/d3-zoom@3.0.0/_esm.js">
+<link rel="modulepreload" href="./_npm/interval-tree-1d@1.0.4/_esm.js">
 <link rel="modulepreload" href="./_npm/apache-arrow@17.0.0/_esm.js">
 <link rel="modulepreload" href="./_node/geojson-equality-ts@1.0.2/index.js">
 <link rel="modulepreload" href="./_node/point-in-polygon-hao@1.1.0/index.js">
@@ -187,6 +189,7 @@
 <link rel="modulepreload" href="./_node/d3-voronoi@1.1.2/index.js">
 <link rel="modulepreload" href="./_npm/internmap@2.0.3/_esm.js">
 <link rel="modulepreload" href="./_npm/delaunator@5.0.1/_esm.js">
+<link rel="modulepreload" href="./_npm/binary-search-bounds@2.0.5/_esm.js">
 <link rel="modulepreload" href="./_npm/tslib@2.7.0/_esm.js">
 <link rel="modulepreload" href="./_npm/flatbuffers@24.3.25/_esm.js">
 <link rel="modulepreload" href="./_node/d3-array@1.2.4/index.js">
@@ -240,9 +243,9 @@ glyphmapTypeInput
 ))
 }});
 
-define({id: "ed6234b7", mode: "inline", inputs: ["morphers2","display"], body: async (morphers2,display) => {
+define({id: "d5a91e5c", mode: "inline", inputs: ["tInput","display"], body: async (tInput,display) => {
 display(await(
-morphers2
+tInput
 ))
 }});
 
@@ -337,7 +340,7 @@ select * from census_data_source;`;
 return {census_data};
 }});
 
-define({id: "cd5fa2fd", inputs: ["regular_geodata_withcensus","d3","_","display"], outputs: ["normalizeValue","data"], body: (regular_geodata_withcensus,d3,_,display) => {
+define({id: "352d8c82", inputs: ["regular_geodata_withcensus","d3","_"], outputs: ["normalizeValue","data"], body: (regular_geodata_withcensus,d3,_) => {
 // normalise the data
 function normalizeValue(paramName, value) {
   const values = regular_geodata_withcensus.features.map(
@@ -366,14 +369,14 @@ const data = _.keyBy(
   }),
   "code"
 );
-display(data);
+// display(data);
 return {normalizeValue,data};
 }});
 
-define({id: "45e6f24f", inputs: ["display","prepareGeoJsonForMorphingLib","regular_geodata"], body: (display,prepareGeoJsonForMorphingLib,regular_geodata) => {
-display(
-  prepareGeoJsonForMorphingLib(regular_geodata, regular_geodata, 300, 300)
-);
+define({id: "3fee57e5", body: () => {
+// display(
+//   prepareGeoJsonForMorphingLib(regular_geodata, regular_geodata, 300, 300)
+// );
 }});
 
 define({id: "5acb849c", inputs: ["d3","data","prepareGeoJsonForMorphingLib","regular_geodata","local_authority","geogName","grid_geodata"], outputs: ["colourScalePop","layouts"], body: (d3,data,prepareGeoJsonForMorphingLib,regular_geodata,local_authority,geogName,grid_geodata) => {
@@ -412,47 +415,6 @@ const layouts = [
 return {colourScalePop,layouts};
 }});
 
-define({id: "2cabceee", inputs: ["prepareGeoJsonForMorphingLib","regular_geodata","local_authority","geogName","grid_geodata"], outputs: ["layouts2"], body: (prepareGeoJsonForMorphingLib,regular_geodata,local_authority,geogName,grid_geodata) => {
-const layouts2 = [
-  {
-    shapes: prepareGeoJsonForMorphingLib(
-      regular_geodata,
-      regular_geodata,
-      200,
-      200
-    ),
-    // colourFn: (key) => colourScalePop(data[key].population),
-    description: local_authority + " " + geogName + " Choropleth Map.",
-  },
-  {
-    shapes: prepareGeoJsonForMorphingLib(
-      grid_geodata,
-      regular_geodata,
-      200,
-      200
-    ),
-    // colourFn: (key) => colourScalePop(data[key].population),
-    description: local_authority + " " + geogName + "Gridmaps.",
-  },
-];
-return {layouts2};
-}});
-
-define({id: "f8054b6a", inputs: ["resize","inSituMorphMouse","layouts2"], outputs: ["morphers2"], body: (resize,inSituMorphMouse,layouts2) => {
-const morphers2 = resize((width, height) =>
-  inSituMorphMouse(
-    {
-      interactive: true,
-      showDescription: false,
-      layouts2,
-      width,
-    },
-    width
-  )
-);
-return {morphers2};
-}});
-
 define({id: "30d51695", body: () => {
 // using observable framework resize callback function
 // const morphers = resize((width, height) =>
@@ -468,6 +430,114 @@ define({id: "30d51695", body: () => {
 // );
 
 // display(morphers);
+}});
+
+define({id: "effbf1a5", inputs: ["prepareGeoJsonForMorphingLib","flubber"], outputs: ["extractCoordinatesForFlubber","interpolateGeoShapes","convertToGeoJSON"], body: (prepareGeoJsonForMorphingLib,flubber) => {
+const extractCoordinatesForFlubber = (features) => {
+  return features.map((feature) => {
+    const { type, coordinates } = feature.geometry;
+
+    if (type === "Polygon") {
+      return coordinates[0]; // Use the first ring in the polygon
+    } else if (type === "MultiPolygon") {
+      return coordinates.flat(2); // Flatten MultiPolygon into a single array of points
+    } else {
+      throw new Error(`Unsupported geometry type: ${type}`);
+    }
+  });
+};
+
+const interpolateGeoShapes = (geography, cartogram, w, h) => {
+  const geogProjected = prepareGeoJsonForMorphingLib(
+    geography,
+    geography,
+    w,
+    h
+  );
+  const cartProjected = prepareGeoJsonForMorphingLib(
+    cartogram,
+    geography,
+    w,
+    h
+  );
+
+  const geogCoords = extractCoordinatesForFlubber(Object.values(geogProjected));
+  const cartCoords = extractCoordinatesForFlubber(Object.values(cartProjected));
+
+  // console.log("geogCoords", geogCoords);
+
+  const interpolator = flubber.interpolateAll(geogCoords, cartCoords, {
+    string: false,
+    single: true,
+  });
+
+  return (t) => {
+    const interpolatedCoords = interpolator(t);
+    return Object.keys(geogProjected).reduce((acc, code, index) => {
+      acc[code] = {
+        ...geogProjected[code],
+        geometry: {
+          ...geogProjected[code].geometry,
+          coordinates: [interpolatedCoords[index]],
+        },
+      };
+      return acc;
+    }, {});
+  };
+};
+
+function convertToGeoJSON(interpolatedShapes) {
+  // console.log("interpolatedShapes", interpolatedShapes);
+  return {
+    type: "FeatureCollection",
+    features: Object.entries(interpolatedShapes).map(([code, feature]) => ({
+      type: "Feature",
+      properties: {
+        ...feature.properties,
+        code: code,
+      },
+      geometry: {
+        type: feature.geometry.type,
+        coordinates: feature.geometry.coordinates,
+      },
+    })),
+  };
+}
+return {extractCoordinatesForFlubber,interpolateGeoShapes,convertToGeoJSON};
+}});
+
+define({id: "e563634b", inputs: ["interpolateGeoShapes","regular_geodata_withcensus","grid_geodata_withcensus","convertToGeoJSON","t","display"], outputs: ["intGeoShapesv2","dataInMorph"], body: (interpolateGeoShapes,regular_geodata_withcensus,grid_geodata_withcensus,convertToGeoJSON,t,display) => {
+const intGeoShapesv2 = interpolateGeoShapes(
+  regular_geodata_withcensus,
+  grid_geodata_withcensus,
+  3000,
+  3000
+);
+const dataInMorph = convertToGeoJSON(intGeoShapesv2(t));
+// display(Object.values(intGeoShapesv2(t)));
+display(dataInMorph);
+return {intGeoShapesv2,dataInMorph};
+}});
+
+define({id: "2614e488", inputs: ["Inputs","Generators"], outputs: ["tInput","t"], body: (Inputs,Generators) => {
+const tInput = Inputs.range([0, 1], {
+  label: "Morph position",
+  value: 0,
+  step: 0.1,
+});
+
+const t = Generators.input(tInput);
+
+// display(t);
+return {tInput,t};
+}});
+
+define({id: "52a96378", inputs: ["Plot","dataInMorph","display"], outputs: ["plots"], body: (Plot,dataInMorph,display) => {
+const plots = Plot.geo(dataInMorph).plot({
+  projection: { type: "identity", domain: dataInMorph },
+});
+display(plots);
+return {plots};
 }});
 
 define({id: "147250e0", inputs: ["d3","_","turf","context2d","flubber","OffscreenCanvas"], outputs: ["inSituMorphMouse","_insertIntermediateLayouts","intermTranslate","prepareGeoJsonForMorphingLib","intermTranslateV","intermCircles","intermChangeShape","intermBbSize"], body: (d3,_,turf,context2d,flubber,OffscreenCanvas) => {
@@ -1100,7 +1170,7 @@ const gridGeodataLookup = _.keyBy(
 return {regularGeodataLookup,gridGeodataLookup};
 }});
 
-define({id: "38be0d16", inputs: ["Inputs","Generators","createDiscretiserValue"], outputs: ["glyphmapTypeInput","glyphmapType","valueDiscretiser"], body: (Inputs,Generators,createDiscretiserValue) => {
+define({id: "21da4792", inputs: ["Inputs","Generators","createDiscretiserValue"], outputs: ["glyphmapTypeInput","glyphmapType","valueDiscretiser"], body: (Inputs,Generators,createDiscretiserValue) => {
 const glyphmapTypeInput = Inputs.radio(["Polygons", "Gridmap", "Gridded"], {
   label: "Type of map",
   value: "Polygons",
@@ -1117,39 +1187,52 @@ function valueDiscretiser(geomLookup) {
     boundaryFn: (key) => geomLookup[key]?.geometry.coordinates[0],
   });
 }
-
-// function valueDiscretiser2(geomLookup1, geomLookup2) {
-//   const val = 0.5;
-//   // extract centroids for both geomLookups
-//   const centroid1 = geomLookup1[key]?.centroid;
-//   const centroid2 = geomLookup2[key]?.centroid;
-
-//   return createDiscretiserValue({
-//     //... and adds a discretisation function that aggregates by CODE and supplies the polygons for each cell
-//     valueFn: (row) => {
-//       return row.code;
-//     },
-//     glyphLocationFn: (key) => geomLookup[key]?.centroid,
-//     boundaryFn: (key) => geomLookup[key]?.geometry.coordinates[0],
-//   });
-// }
-
-// display(valueDiscretiser(regularGeodataLookup));
-// display(transformCoordinates(turf.bbox(regular_geodata)));
 return {glyphmapTypeInput,glyphmapType,valueDiscretiser};
 }});
 
-define({id: "59986b15", inputs: ["turf","regular_geodata","proj","data","regularGeodataLookup","d3","insideCell","drawRadialMultivariateGlyph"], outputs: ["glyphMapSpec"], body: (turf,regular_geodata,proj,data,regularGeodataLookup,d3,insideCell,drawRadialMultivariateGlyph) => {
+define({id: "d1f66c71", inputs: ["turf","createDiscretiserValue","display","dataInMorph"], outputs: ["valueDiscretiserInMorph"], body: (turf,createDiscretiserValue,display,dataInMorph) => {
+function valueDiscretiserInMorph(inp) {
+  // create lookup on the fly
+  let geomLookup = Object.fromEntries(
+    inp.features.map((feature) => {
+      const centroid = turf.centroid(feature).geometry.coordinates; // calculate centroid
+      return [
+        feature.properties.code,
+        {
+          ...feature,
+          centroid, // store centroid
+        },
+      ];
+    })
+  );
+
+  // console.log(geomLookup);
+
+  return createDiscretiserValue({
+    valueFn: (row) => row.code,
+    glyphLocationFn: (key) => geomLookup[key]?.centroid, // Use the calculated centroid
+    boundaryFn: (key) => geomLookup[key]?.geometry.coordinates[0], // Access the boundary (first set of coordinates)
+  });
+}
+
+display(valueDiscretiserInMorph(dataInMorph));
+display(turf.bbox(dataInMorph));
+// display(transformCoordinates(turf.bbox(regular_geodata)));
+return {valueDiscretiserInMorph};
+}});
+
+define({id: "4dc7a71e", inputs: ["turf","regular_geodata","dataInMorph","data","regularGeodataLookup","d3","insideCell","drawRadialMultivariateGlyph"], outputs: ["glyphMapSpec"], body: (turf,regular_geodata,dataInMorph,data,regularGeodataLookup,d3,insideCell,drawRadialMultivariateGlyph) => {
 // glyphmap basic specs
 function glyphMapSpec(width, height) {
   // console.log("in glyphmapspec", width, height);
   const bbox = turf.bbox(regular_geodata);
   return {
-    // coordType: "notmercator",
-    initialBB: [
-      ...proj.toGeo([bbox[0], bbox[1]]),
-      ...proj.toGeo([bbox[2], bbox[3]]),
-    ],
+    coordType: "notmercator",
+    initialBB: turf.bbox(dataInMorph),
+    // initialBB: [
+    //   ...proj.toGeo([bbox[0], bbox[1]]),
+    //   ...proj.toGeo([bbox[2], bbox[3]]),
+    // ],
     data: Object.values(data),
     getLocationFn: (row) => regularGeodataLookup[row.code]?.centroid,
     discretisationShape: "grid",
@@ -1265,7 +1348,7 @@ function glyphMapSpec(width, height) {
 return {glyphMapSpec};
 }});
 
-define({id: "51a431c3", inputs: ["glyphMap","glyphMapSpec","valueDiscretiser","regularGeodataLookup","gridGeodataLookup"], outputs: ["createGlyphMap","glyphmap"], body: (glyphMap,glyphMapSpec,valueDiscretiser,regularGeodataLookup,gridGeodataLookup) => {
+define({id: "662d9f13", inputs: ["glyphMap","glyphMapSpec","valueDiscretiser","regularGeodataLookup","valueDiscretiserInMorph","dataInMorph"], outputs: ["createGlyphMap","glyphmap"], body: (glyphMap,glyphMapSpec,valueDiscretiser,regularGeodataLookup,valueDiscretiserInMorph,dataInMorph) => {
 function createGlyphMap(glyphmapType, { width, height }) {
   // console.log(width, height);
   if (glyphmapType == "Polygons") {
@@ -1276,7 +1359,7 @@ function createGlyphMap(glyphmapType, { width, height }) {
   } else if (glyphmapType == "Gridmap") {
     return glyphMap({
       ...glyphMapSpec(width, height), //takes the base spec...
-      discretiserFn: valueDiscretiser(gridGeodataLookup),
+      discretiserFn: valueDiscretiserInMorph(dataInMorph),
     });
   } else if (glyphmapType == "Gridded") {
     return glyphMap(glyphMapSpec(width, height)); //uses the base spec as it (by default, it grids)
@@ -1400,12 +1483,13 @@ body, html {
 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<div style="padding:10px;"> <observablehq-loading></observablehq-loading><!--:c0e452dc:--> </div>
         <hr>
         <div style="padding:10px;"> Press the 'spacebar' button to gradually morph the shape. &nbsp;</div>
-        <div style="padding:10px;"><observablehq-loading></observablehq-loading><!--:ed6234b7:--></div>
+        <div style="padding:10px;">morphers2 here</div>
+        <div style="padding:10px;"><observablehq-loading></observablehq-loading><!--:d5a91e5c:--></div>
     </div>
     <div class="card glyphmaps grid-colspan-3" style="padding:8px; height:92vh;">
      <observablehq-loading></observablehq-loading><!--:271c02bf:-->
     </div>
-    <div class="card grid-colspan-1" style="padding:8px; height:92vh;" --="">
+    <div class="card grid-colspan-1" style="padding:8px; height:92vh;">
     </div>
 </div>
 <!-- ------------------ # Data and Inputs ------------------  -->
@@ -1419,20 +1503,23 @@ body, html {
 <div class="observablehq observablehq--block"><!--:0edc8540:--></div>
 <div class="observablehq observablehq--block"><!--:47b53055:--></div>
 <!-- ------------------ # Morphing Geometry Functions ------------------  -->
-<div class="observablehq observablehq--block"><!--:cd5fa2fd:--></div>
-<div class="observablehq observablehq--block"><!--:45e6f24f:--></div>
+<div class="observablehq observablehq--block"><!--:352d8c82:--></div>
+<div class="observablehq observablehq--block"><!--:3fee57e5:--></div>
 <div class="observablehq observablehq--block"><!--:5acb849c:--></div>
-<div class="observablehq observablehq--block"><!--:2cabceee:--></div>
-<div class="observablehq observablehq--block"><!--:f8054b6a:--></div>
 <div class="observablehq observablehq--block"><!--:30d51695:--></div>
 <!-- ------------------ # Morphing Geometry Functions ------------------  -->
+<div class="observablehq observablehq--block"><!--:effbf1a5:--></div>
+<div class="observablehq observablehq--block"><!--:e563634b:--></div>
+<div class="observablehq observablehq--block"><!--:2614e488:--></div>
+<div class="observablehq observablehq--block"><!--:52a96378:--></div>
 <div class="observablehq observablehq--block"><!--:147250e0:--></div>
 <!-- ------------------ # Gridded-Glyphmap Functions ------------------  -->
 <div class="observablehq observablehq--block"><!--:3ca232e1:--></div>
 <div class="observablehq observablehq--block"><!--:4913bd0b:--></div>
-<div class="observablehq observablehq--block"><!--:38be0d16:--></div>
-<div class="observablehq observablehq--block"><!--:59986b15:--></div>
-<div class="observablehq observablehq--block"><!--:51a431c3:--></div>
+<div class="observablehq observablehq--block"><!--:21da4792:--></div>
+<div class="observablehq observablehq--block"><!--:d1f66c71:--></div>
+<div class="observablehq observablehq--block"><!--:4dc7a71e:--></div>
+<div class="observablehq observablehq--block"><!--:662d9f13:--></div>
 <div class="observablehq observablehq--block"><!--:92e60971:--></div>
 <div class="observablehq observablehq--block"><!--:246c80d3:--></div>
 <div class="observablehq observablehq--block"><!--:9d040433:--></div>
